k8s-yaml/deploy-env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: firefox
  template:
    metadata:
      labels:
        app: firefox
    spec:
      containers:
        - name: firefox
          image: jlesage/firefox
          resources:
            limits:
              memory: "25Mi"
              cpu: "10m"
          # 为每个pod指定变量
