k8s-yaml/init容器.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mydb
  labels:
    app: db
spec:
  # init容器fetch启动完成后,才会启动业务容器mysql
  containers:
    - name: mysql
      image: mysql
      volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d
          name: dump
  volumes:
    - emptyDir: {}
      name: dump
