k8s-yaml/nfs-volumes.yaml
---
# pod绑定pvc
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: <Image>
      volumeMounts:
        - mountPath: Path to mount # 容器中的挂载点(挂砸到容器中的哪个目录)
          name: pod-data # 从哪个volumes挂载
      # pod资源限制
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: <Port> # 容器暴露的端口
  # 使用PVC声明一个volumes(存储卷)
  volumes:
    - name: pod-data # 存储卷的名字
      persistentVolumeClaim:
        claimName: mypvc # 要使用的pvc的名字
