k8s-yaml/pod-node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-kusc00401
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
      resources:
        requests:
          cpu: "250m"
          memory: "64Mi"
        limits:
          cpu: "250m"
          memory: "250m"
  # 添加选择node
  nodeSelector:
    disktype: ssd
