k8s-yaml/pod-多容器.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kucc4
spec:
  containers:
    - name: nginx
      image: nginx
    - name: redis
      image: redis
    - name: memcached
      image: memcached
